--- a/Python/.vscode/settings.json
+++ b/Python/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "python.linting.pylintEnabled": true,
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "/usr/local/bin/python3",
+    "git.alwaysShowStagedChangesResourceGroup": true,
+    "git.autofetch": true
 }
